@@ -30,6 +30,8 @@ static int const EXIT_WARNING = 3;
 
 static char const* whoami = 0;
 
+static std::string expected_version = "8.4.0";
+
 struct PageSpec
 {
     PageSpec(std::string const& filename,
@@ -993,6 +995,17 @@ ArgParser::argPositional(char* arg)
 void
 ArgParser::argVersion()
 {
+    if (expected_version != QPDF::QPDFVersion())
+    {
+        std::cerr << "***\n"
+                  << "WARNING: qpdf CLI from version " << expected_version
+                  << " is using library version " << QPDF::QPDFVersion()
+                  << ".\n"
+                  << "This probably means you have multiple versions of qpdf installed\n"
+                  << "and don't have your library path configured correctly.\n"
+                  << "***"
+                  << std::endl;
+    }
     std::cout
         << whoami << " version " << QPDF::QPDFVersion() << std::endl
         << "Run " << whoami << " --copyright to see copyright and license information."
